--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Hallo Coursera</title>
+    <title>Hello Coursera!</title>
   </head>
   <body>
-    <h1>Hallo Coursera</h1>
+    <h1>Hello Coursera! Nice try</h1>
 
   </body>
 </html>
