--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <title>Hello Coursera!</title>
   </head>
   <body>
-    <h1>Hello Coursera! Nice try</h1>
-
+    <h1>Hello Coursera! Nice try) Oh Fuck!</h1>
+    
   </body>
 </html>
